# career-bridge

./: .gitignore  LICENSE  Makefile  README.md  bash.exe.stackdump  make.bat  make.ps1
backend/: .dockerignore  .sqlxrc  Cargo.toml  DATABASE_SETUP.md  Dockerfile  QUICK_FIX_JOBS.md  README.md  README_JOBS_FIX.md  api_tests.http  load_seed_data.sql  railway.json  railway.toml  schema.sql  seed_data.sql  setup_database.sql  setup_db.ps1  setup_db.sh
backend/.sqlx/: query-170b69d09cb53c1845ef1d0d282d7f2be504087c7c122e196b78db22170f7bcd.json  query-1ff429903bd36026c9f6022842aa263d879943bf9e2525231bedc123728f38f7.json  query-2ebfd8487c8fa4ce3c3fa38b8b91bd1da195c767c6ebbfdca24cca975b5cb581.json  query-3493da1907f0bff8acb0ff9b72444195138a109c3f99e53578d49ded7e7d2907.json  query-434da4b274f9d3750665b17313c6c916beb65895516fe339e49fedf6ca87a0e2.json  query-57649052533780408688bf8a644818b50eb7728d69bfe7ecf5e073ad3f7c01de.json  query-83ce9d21cf2c2a96c79296d029e0a6428108697d97ffa4157d0b30c7a5409e65.json  query-cf65ece81f95fd945bd7e87170c37de21d2c56b7865f51b045ad04dc97fbc0ff.json  query-d06a2bc4b64793d35a469940724c2b93d7572d4252b9837bcc1457dd9450af62.json
backend/src/: ai_matching.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  security.rs
backend/src/ai/: gemini.rs  groq.rs
backend/src/handlers/: ai.rs  auth.rs  external_jobs.rs  jobs.rs  learning.rs  mod.rs  profile.rs  types.rs
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/components/: ClientComponents.tsx  Footer.tsx  JobCard.tsx  JobDetailsModal.tsx  Navbar.tsx  ResourceCard.tsx  TestimonialScroll.tsx
frontend/src/lib/: api.ts
(+9 files in other folders)
