[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
rand = { version = "0.9", features = ["std_rng"] }
validator = { version = "0.20", features = ["derive"] }
axum = "0.8.6"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "json"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenvy = "0.15"
