[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
rand = { version = "0.9", features = ["std_rng"] }
validator = { version = "0.20", features = ["derive"] }
axum = { version = "0.8.6", features = ["multipart"] }
serde = "1.0.228"
serde_json = "1.0.145"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "json", "uuid", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1.11", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
urlencoding = "2.1"
pdf-extract = "0.7"
tempfile = "3.14"
printpdf = "0.7"
